Fix book card stretching over whole screen

--- a/frontend/src/app/books/books.component.scss
+++ b/frontend/src/app/books/books.component.scss
@@ -1,6 +1,7 @@
 :host {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: max-content;
   gap: 10px;
 }
 
